fix: add index.html at root

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <!-- Home Section -->
 <section id="home" class="hero">
   <div class="hero-text">
-    <h1>Save Smart.<br>Save the Planet.</h1>
+    <h1>Save Smart.<br>Save the planet.</h1>
     <p>The Smart HydroHavester keeps your drinks fresh, tracks your refills, and helps you reduce single-use plastic waste. Join the movement today!</p>
     <button class="btn" onclick="buyNow()">Buy Now</button>
   </div>
@@ -74,11 +74,11 @@
   </div>
 </section>
 
-<!-- About Us Section -->
+<!-- About Founder Section -->
 <section id="about" class="about">
-  <h2>About Us</h2>
+  <h2>About the founder</h2>
   <p>
-    Eco-Voyagers was founded in 2025 by a passionate team: Titus Mathew, Yatharth, Vivaan Agarwal, Aaradhya Soni, and Shreyansh Kumar from 6E. They were determined to create a product that makes sustainable living fun, easy, and impactful.
+    Eco-Voyagers was founded in 2025 by a boy named Titus Mathew from 6E. They were determined to create a product that makes sustainable living fun, easy, and impactful.
   </p>
   <p>
     The inspiration came while seeing the effect on wildlife and the environment, motivated the team to take action. They wanted a solution that combined technology, convenience, and eco-consciousness. This led to the creation of the Smart HydroHarvester that encourages recycling, tracks impact, and even gives smart AI suggestions.
@@ -180,7 +180,7 @@ function getAIResponse(message){
   const msg = message.toLowerCase();
 
   if(msg.includes('founders')) 
-    return 'Refill Revolution was founded in 2025 by Titus Mathew, Yatharth, Vivaan Agarwal, Aaradhya Soni, and Shreyansh Kumar.';
+    return 'Refill Revolution was founded in 2025 by Titus Mathew, Yatharth, Vivaan Agarwal, Essa, and Shreyansh Kumar.';
   
   if(msg.includes('importance')) 
     return 'Reducing single-use plastic is important to protect wildlife, reduce pollution, and preserve the planet for future generations.';
